# Interpreter

./: .gitignore  CMakeLists.txt  testData.txt
include/: AbstractSyntaxTree.h  Evaluator.h  ForwardDeclares.h  Lexer.h  Logger.h  Objects.h  Parser.h  Token.h  Utility.h
main/: main.cpp
src/: AbstractSyntaxTree.cpp  Evaluator.cpp  Lexer.cpp  Logger.cpp  Objects.cpp  Parser.cpp  Token.cpp  Utility.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/input/: booleanExpressionTest.txt  callExpressionTest.txt  elseIfTest.txt  evalBangPrefixExpressionTest.txt  evalBoolExpressionTest.txt  evalBoolInfixExpressionTest.txt  evalIntegerExpressionTest.txt  evalMinusPrefixExpressionTest.txt  functionExpressionTest.txt  functionParameterTest.txt  groupedExpressionTest.txt  identifierExpressionStatementsTest.txt  ifElseExpressionTest.txt  ifExpressionTest.txt  infixExpressionTest2.txt  infixOperatorExpressionStatementsTest.txt  letStatementTest.txt  operatorPrecedenceTest.txt  prefixOperatorExpressionStatementsTest.txt  testErorrHandling.txt
